Fix code box alignment bug

--- a/contact.css
+++ b/contact.css
@@ -46,10 +46,6 @@ h1 {
     width: 50%;
 }
 
-#code {
-    width: 100%;
-}
-
 #code-box {
 	font-family: 'Oswald', sans-serif;
 	text-align: center;
